@@ -1,28 +1,65 @@
-package com.winlator.core;
+package com.winlator.cmod.core;
 
 import android.os.Process;
+import android.util.Log;
 
 import java.io.BufferedReader;
 import java.io.File;
+import java.io.FileInputStream;
+import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.Executors;
 
 public abstract class ProcessHelper {
-    public static final boolean PRINT_DEBUG = false; // FIXME change to false
+    public static final boolean PRINT_DEBUG = true; // FIXME change to false
     private static final ArrayList<Callback<String>> debugCallbacks = new ArrayList<>();
     private static final byte SIGCONT = 18;
     private static final byte SIGSTOP = 19;
+    private static final byte SIGTERM = 15;
+    private static final byte SIGKILL = 9;
 
     public static void suspendProcess(int pid) {
         Process.sendSignal(pid, SIGSTOP);
+        Log.d("ProcessHelper", "Process suspended with pid: " + pid);
     }
 
     public static void resumeProcess(int pid) {
         Process.sendSignal(pid, SIGCONT);
+        Log.d("ProcessHelper", "Process resumed with pid: " + pid);
+    }
+
+    public static void terminateProcess(int pid) {
+        Process.sendSignal(pid, SIGTERM);
+        Log.d("ProcessHelper", "Process terminated with pid: " + pid);
+    }
+
+    public static void killProcess(int pid) {
+        Process.sendSignal(pid, SIGKILL);
+        Log.d("ProcessHelper", "Process killed with pid: " + pid);
+    }
+
+    public static void terminateAllWineProcesses() {
+        for (String process : listRunningWineProcesses()) {
+            terminateProcess(Integer.parseInt(process));
+        }
+    }
+
+    public static void pauseAllWineProcesses() {
+        for (String process : listRunningWineProcesses()) {
+            suspendProcess(Integer.parseInt(process));
+        }
+    }
+
+    public static void resumeAllWineProcesses() {
+        for (String process : listRunningWineProcesses()) {
+            resumeProcess(Integer.parseInt(process));
+        }
     }
 
     public static int exec(String command) {
@@ -38,22 +75,45 @@ public abstract class ProcessHelper {
     }
 
     public static int exec(String command, String[] envp, File workingDir, Callback<Integer> terminationCallback) {
+        Log.d("ProcessHelper", "env: " + Arrays.toString(envp) + "\ncmd: " + command);
+
+        // Store env vars for future use
+        EnvironmentManager.setEnvVars(envp);
+
         int pid = -1;
         try {
-            java.lang.Process process = Runtime.getRuntime().exec(splitCommand(command), envp, workingDir);
+            Log.d("ProcessHelper", "Splitting command: " + command);
+            String[] splitCommand = splitCommand(command);
+            Log.d("ProcessHelper", "Split command result: " + Arrays.toString(splitCommand));
+            Log.d("ProcessHelper", "Starting process...");
+            ProcessBuilder pb = new ProcessBuilder(splitCommand);
+            pb.directory(workingDir);
+            pb.environment().putAll(EnvironmentManager.getEnvVars());
+            if (debugCallbacks.isEmpty()) {
+                File null_file = new File("/dev/null");
+                pb.redirectError(null_file);
+                pb.redirectOutput(null_file);
+            }
+            //java.lang.Process process = Runtime.getRuntime().exec(splitCommand, envp, workingDir);
+            java.lang.Process process = pb.start();
+
+            // Accessing hidden field
+            Log.d("ProcessHelper", "Accessing hidden field to get PID");
             Field pidField = process.getClass().getDeclaredField("pid");
             pidField.setAccessible(true);
             pid = pidField.getInt(process);
             pidField.setAccessible(false);
+            Log.d("ProcessHelper", "Process started with pid: " + pid);
 
             if (!debugCallbacks.isEmpty()) {
                 createDebugThread(process.getInputStream());
                 createDebugThread(process.getErrorStream());
             }
 
-            if (terminationCallback != null) createWaitForThread(process, terminationCallback);
         }
-        catch (Exception e) {}
+        catch (Exception e) {
+            Log.e("ProcessHelper", "Error executing command: " + command, e);
+        }
         return pid;
     }
 
@@ -70,35 +130,30 @@ public abstract class ProcessHelper {
                     }
                 }
             }
-            catch (IOException e) {}
-        });
-    }
-
-    private static void createWaitForThread(java.lang.Process process, final Callback<Integer> terminationCallback) {
-        Executors.newSingleThreadExecutor().execute(() -> {
-            try {
-                int status = process.waitFor();
-                terminationCallback.call(status);
+            catch (IOException e) {
+                Log.e("ProcessHelper", "Error in debug thread", e);
             }
-            catch (InterruptedException e) {}
         });
     }
 
     public static void removeAllDebugCallbacks() {
         synchronized (debugCallbacks) {
             debugCallbacks.clear();
+            Log.d("ProcessHelper", "All debug callbacks removed");
         }
     }
 
     public static void addDebugCallback(Callback<String> callback) {
         synchronized (debugCallbacks) {
             if (!debugCallbacks.contains(callback)) debugCallbacks.add(callback);
+            Log.d("ProcessHelper", "Added debug callback: " + callback.toString());
         }
     }
 
     public static void removeDebugCallback(Callback<String> callback) {
         synchronized (debugCallbacks) {
             debugCallbacks.remove(callback);
+            Log.d("ProcessHelper", "Removed debug callback: " + callback.toString());
         }
     }
 
@@ -183,5 +238,33 @@ public abstract class ProcessHelper {
         int affinityMask = 0;
         for (int i = from; i < to; i++) affinityMask |= (int)Math.pow(2, i);
         return affinityMask;
+    }
+
+    public static ArrayList<String> listRunningWineProcesses(){
+        File proc = new File("/proc");
+        String[] filters = {"wine", "exe"};
+        String[] allPids;
+        ArrayList<String> filteredPids = new ArrayList<String>();
+        List<String> filterList = Arrays.asList(filters);
+        allPids = proc.list(new FilenameFilter(){
+            public boolean accept(File proc, String filename){
+                return new File(proc, filename).isDirectory() && filename.matches("[0-9]+");
+            }
+        });
+
+        for (int index = 0; index < allPids.length; index++){
+            String data = "";
+            try {
+                FileInputStream fr = new FileInputStream(proc + "/" + allPids[index] + "/stat");
+                BufferedReader br = new BufferedReader(new InputStreamReader(fr));
+                data = br.readLine();
+            }
+            catch (IOException e) {}
+            for (String filter : filterList) {
+                if (data.contains(filter))
+                    filteredPids.add(allPids[index]);
+            }
+        }
+        return filteredPids;
     }
 }
